--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>안전보건 시스템 - 로그인</title>
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/login/login.css" />
-    <link rel="stylesheet" href="/css/login/pwFind.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/login/login.css" />
+    <link rel="stylesheet" href="./css/login/pwFind.css" />
   </head>
   <body>
     <main id="loginWrap" class="wrap">
@@ -118,6 +118,6 @@
       </div>
     </div>
 
-    <script src="/js/login/login.js"></script>
+    <script src="./js/login/login.js"></script>
   </body>
 </html>
