--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 <label class="form-label" for="user-id">아이디</label>
                 <input class="form-input" type="text" id="user-id" name="userId" autocomplete="username" required placeholder="아이디를 입력하세요" />
               </div>
+              <span id="loginIdNotice" class="id-no-ko">아이디는 영문,숫자만 사용 가능합니다.</span>
 
               <div class="form-group">
                 <label class="form-label" for="user-pw">비밀번호</label>
@@ -104,6 +105,7 @@
           <label class="modal-label" for="pwUserId">아이디</label>
           <input type="text" id="pwUserId" class="modal-input" placeholder="아이디를 입력하세요" />
         </div>
+        <span id="pwFindIdNotice" class="id-no-ko">아이디는 영문,숫자만 사용 가능합니다.</span>
 
         <div class="modal-field">
           <label class="modal-label" for="pwPhone">휴대폰 번호</label>
